<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <View style="@style/DeepUnderLine" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_15dp">

        <TextView
            android:id="@+id/order_detail_goods_total_price_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_order_detail_goods_total_price"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/order_detail_goods_total_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¥0.00"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/order_detail_goods_dispatch_price_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_5dp"
            android:text="@string/personal_order_detail_goods_dispatch_price"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintTop_toBottomOf="@+id/order_detail_goods_total_price_label_tv" />

        <TextView
            android:id="@+id/order_detail_goods_dispatch_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_5dp"
            android:text="¥0.00"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_detail_goods_total_price_tv"/>

        <TextView
            android:id="@+id/order_detail_goods_order_total_price_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_5dp"
            android:text="@string/personal_order_detail_order_total_price"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintTop_toBottomOf="@+id/order_detail_goods_dispatch_price_label_tv" />

        <TextView
            android:id="@+id/order_detail_goods_order_total_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_5dp"
            android:text="¥0.00"
            android:textColor="@color/color_ff3234"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_detail_goods_dispatch_price_tv"/>
    </android.support.constraint.ConstraintLayout>

    <View style="@style/SpaceLine" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_15dp">
        <TextView
            android:id="@+id/order_detail_goods_order_no_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_order_detail_order_no"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_order_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_15dp"
            android:paddingLeft="@dimen/size_15dp"
            android:paddingRight="@dimen/size_15dp"
            android:paddingTop="@dimen/size_4dp"
            android:paddingBottom="@dimen/size_4dp"
            android:textSize="@dimen/text_size_14sp"
            android:textColor="@color/color_666666"
            android:text="@string/str_copy"
            android:background="@drawable/bg_rectangle_gray_stroke_btn"
            app:layout_constraintLeft_toRightOf="@+id/order_detail_goods_order_no_tv"/>

        <TextView
            android:id="@+id/order_detail_order_create_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_5dp"
            android:text="@string/personal_order_detail_order_create_time"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintTop_toBottomOf="@+id/order_detail_goods_order_no_tv" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
