<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/size_8dp"
    android:layout_marginRight="@dimen/size_8dp"
    android:layout_marginTop="@dimen/size_10dp"
    android:layout_marginBottom="@dimen/size_10dp"
    android:orientation="horizontal"
    android:background="@drawable/bg_u_order">
    <!--豆 -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="@dimen/size_5dp"
        android:paddingBottom="@dimen/size_10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_size_18sp"
            android:paddingBottom="@dimen/size_10dp"
            android:text="0"
            android:lines="1"
            android:ellipsize="end"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_size_11sp"
            android:text="@string/personal_package_1"
            android:lines="1"
            android:ellipsize="end"/>
    </LinearLayout>

    <!--优惠券 -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="@dimen/size_5dp"
        android:paddingBottom="@dimen/size_10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_size_18sp"
            android:paddingBottom="@dimen/size_10dp"
            android:text="0"
            android:lines="1"
            android:ellipsize="end"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_size_11sp"
            android:text="@string/personal_package_2"
            android:lines="1"
            android:ellipsize="end"/>
    </LinearLayout>

    <!--白条 -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="@dimen/size_5dp"
        android:paddingBottom="@dimen/size_10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_size_18sp"
            android:paddingBottom="@dimen/size_10dp"
            android:text="0.00"
            android:lines="1"
            android:ellipsize="end"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_size_11sp"
            android:text="@string/personal_package_3"
            android:lines="1"
            android:ellipsize="end"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black_4d"
            android:textSize="@dimen/text_size_10sp"
            android:text="最高5万额度"
            android:lines="1"
            android:ellipsize="end"/>
    </LinearLayout>

    <!--小金库 -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="@dimen/size_5dp"
        android:paddingBottom="@dimen/size_10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_size_18sp"
            android:paddingBottom="@dimen/size_10dp"
            android:text="0.00"
            android:lines="1"
            android:ellipsize="end"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_size_11sp"
            android:text="@string/personal_package_4"
            android:lines="1"
            android:ellipsize="end"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black_4d"
            android:textSize="@dimen/text_size_10sp"
            android:text="新人有礼"
            android:lines="1"
            android:ellipsize="end"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_35dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_u_container"/>

    <!--我的钱包 -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="@dimen/size_5dp"
        android:paddingBottom="@dimen/size_10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_u_package"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_size_11sp"
            android:text="@string/personal_package_5"
            android:lines="1"
            android:ellipsize="end"/>

    </LinearLayout>

</LinearLayout>
